<resources>
    <string name="app_name">ID QR</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="recover_password_btn_txt">RECUPERAR CONTRASEÑA</string>
    <string name="input_correo_txt">Correo</string>
    <string name="input_usuario_txt">Usuario</string>
    <string name="input_contrasena_txt">Contraseña</string>
    <string name="input_username_txt">Username</string>
    <string name="input_password_txt">Password</string>
    <string name="temporal">Temporal</string>
    <string name="forgot_password">Olvidé mi Contraseña</string>
    <string name="title_activity_main_screen_qr">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_screen__q_r">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="qr">QR</string>
    <string name="pago">Pago</string>
    <string name="recarga">Recarga</string>
    <string name="historial">Historial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento_qr">Fragmento QR</string>
    <string name="fragmento_pago">Fragmento Pago</string>
    <string name="fragmento_recarga">Fragmento Recarga</string>
    <string name="fragmento_historial">Fragmento Historial</string>
    <string name="pago_dia_normal">Pago Normal</string>
    <string name="pago_dia_completo">Pago Dia Completo</string>
    <string name="pago_transporte_eia">Pago Transporte EIA</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="correo">Correo</string>
    <string name="logo_idqr">logo idqr</string>
    <string name="logo_u">logo u</string>

    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="desea_cerrar_sesion">¿Desea Cerrar Sesión?</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="next">Next</string>
    <string name="cop">COP</string>
    <string name="valor_a_recargar">Valor a Recargar</string>
    <string name="metodo_de_pago">Metodo de Pago</string>
    <string name="buscar_en_guardados">Buscar en Guardados</string>
    <string name="contactar_soporte">Contactar Soporte</string>
    <string name="ayuda">Ayuda</string>
    <string name="user_account">Cuenta de Usuario</string>
    <string name="user">Usuario</string>
    <string name="saldo_actual_txt">Saldo Actual: $</string>
    <string name="agregar_metodo_pago">Agregar Metodo de Pago</string>
    <string name="aceptar">Aceptar</string>
    <string name="ok">OK</string>
    <string name="agregar_pago_txt">Agregar Pago</string>

    <string-array name="opciones_de_pago">
        <item>Credito</item>
        <item>Debito</item>
        <item>Mastercard</item>
        <item>Amex</item>
        <item>otro</item>
    </string-array>
    <string-array name="bancos">
        <item>AV Villas</item>
        <item>Caja Social</item>
        <item>Banco de Occidente</item>
        <item>Banco Popular</item>
        <item>Bancolombia</item>
        <item>BBVA</item>
        <item>Banco de Bogotá</item>
        <item>Colpatria</item>
        <item>Davivienda</item>

    </string-array>
    <string-array name="bancos2">
        <item>Banco AV Villas</item>
        <item>Banco Caja Social</item>
        <item>Banco de Occidente</item>
        <item>Banco Popular</item>
        <item>Bancolombia</item>
        <item>BBVA</item>
        <item>Banco de Bogotá</item>
        <item>Colpatria</item>
        <item>Davivienda</item>

    </string-array>

</resources>