<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".login.RecoverPassword">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_U_layout_recoverP"
                android:layout_width="177dp"
                android:layout_height="135dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_eia"
                android:contentDescription="@string/logo_u" />

            <ImageView
                android:id="@+id/logo_idqr_layout_recoverP"
                android:layout_width="129dp"
                android:layout_height="123dp"
                android:layout_marginStart="41dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="@+id/logo_U_layout_recoverP"
                app:layout_constraintStart_toEndOf="@+id/logo_U_layout_recoverP"
                app:layout_constraintTop_toTopOf="@+id/logo_U_layout_recoverP"
                app:srcCompat="@drawable/logo_idqr"
                android:contentDescription="@string/logo_idqr" />

            <TextView
                android:id="@+id/forgot_password_textView_layout_recoverP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="67dp"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_U_layout_recoverP" />

            <EditText
                android:id="@+id/email_editText_Layout_recoverP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_correo_txt"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_textView_layout_recoverP"
                android:autofillHints="" />

            <TextView
                android:id="@+id/email_textView_layout_recoverP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:text="@string/correo"
                app:layout_constraintStart_toStartOf="@+id/email_editText_Layout_recoverP"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_textView_layout_recoverP" />

            <Button
                android:id="@+id/recover_btn_layout_recoverP"
                android:layout_width="148dp"
                android:layout_height="62dp"
                android:layout_marginTop="62dp"
                android:text="@string/recover_password_btn_txt"
                app:backgroundTint="@color/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_editText_Layout_recoverP" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>