<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".login.RecoverPassword">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_U_layout_recoverP"
                android:layout_width="177dp"
                android:layout_height="135dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_u"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_eia" />

            <ImageView
                android:id="@+id/logo_idqr_layout_recoverP"
                android:layout_width="129dp"
                android:layout_height="123dp"
                android:layout_marginStart="41dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_idqr"
                app:layout_constraintBottom_toBottomOf="@+id/logo_U_layout_recoverP"
                app:layout_constraintStart_toEndOf="@+id/logo_U_layout_recoverP"
                app:layout_constraintTop_toTopOf="@+id/logo_U_layout_recoverP"
                app:srcCompat="@drawable/logo_idqr" />

            <TextView
                android:id="@+id/forgot_password_textView_layout_recoverP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="67dp"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_U_layout_recoverP" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/input_correo_txt"
                app:boxBackgroundColor="@color/background"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_textView_layout_recoverP">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText_Layout_recoverP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/recover_btn_layout_recoverP"
                android:layout_width="148dp"
                android:layout_height="62dp"
                android:layout_marginTop="29dp"
                android:text="@string/recover_password_btn_txt"
                app:backgroundTint="@color/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>