<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginMain">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="377dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_U_layout_login"
                android:layout_width="177dp"
                android:layout_height="135dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:clickable="false"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_eia"
                android:contentDescription="@string/logo_u" />

            <ImageView
                android:id="@+id/logo_idqr_layout_login"
                android:layout_width="129dp"
                android:layout_height="123dp"
                android:layout_marginEnd="38dp"
                android:adjustViewBounds="true"
                android:clickable="false"
                android:contentDescription="@string/logo_idqr"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="@+id/logo_U_layout_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo_U_layout_login"
                app:srcCompat="@drawable/logo_idqr" />

            <Button
                android:id="@+id/login_btn_layout_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="61dp"
                android:focusable="false"
                android:text="@string/login_btn_txt"
                android:textColor="@color/white"
                app:backgroundTint="@color/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password_field" />

            <Button
                android:id="@+id/recover_password_btn_layout_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="recoverPassword"
                android:text="@string/recover_password_btn_txt"
                android:textColor="@color/white"
                app:backgroundTint="@color/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn_layout_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_user_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="98dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:hint="@string/input_correo_txt"
                app:boxBackgroundColor="@color/background"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout_password_field"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout_password_field"
                app:layout_constraintTop_toBottomOf="@+id/logo_U_layout_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="90dp"
                app:boxBackgroundColor="@color/background"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_user_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_password_txt"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>