<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".login.RecoverPassword">

    <ImageView
        android:id="@+id/logo_U_layout_login"
        android:layout_width="177dp"
        android:layout_height="135dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_eia" />

    <ImageView
        android:id="@+id/logo_idqr_layout_login"
        android:layout_width="129dp"
        android:layout_height="123dp"
        android:layout_marginStart="39dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/logo_U_layout_login"
        app:layout_constraintStart_toEndOf="@+id/logo_U_layout_login"
        app:layout_constraintTop_toTopOf="@+id/logo_U_layout_login"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo_idqr" />

    <TextView
        android:id="@+id/forgot_password_textView_layout_recoverP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="512dp"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_U_layout_recoverP" />

    <EditText
        android:id="@+id/email_editText_Layout_recoverP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_correo_txt"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_textView_layout_recoverP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/email_editText_Layout_recoverP"
        app:layout_constraintStart_toStartOf="@+id/email_editText_Layout_recoverP" />

    <Button
        android:id="@+id/recover_btn_layout_recoverP"
        android:layout_width="148dp"
        android:layout_height="62dp"
        android:text="@string/recover_password_btn_txt"
        app:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_Layout_recoverP"
        app:layout_constraintVertical_bias="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>