<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.PagoFragment">

    <ImageView
        android:id="@+id/logo_U_layout_login"
        android:layout_width="177dp"
        android:layout_height="135dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/ib_pago_dia_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_eia" />

    <ImageView
        android:id="@+id/logo_idqr_layout_login"
        android:layout_width="129dp"
        android:layout_height="123dp"
        android:layout_marginStart="39dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/logo_U_layout_login"
        app:layout_constraintStart_toEndOf="@+id/logo_U_layout_login"
        app:layout_constraintTop_toTopOf="@+id/logo_U_layout_login"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo_idqr" />

    <Button
        android:id="@+id/btn_pago_dia_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/pago_dia_normal"
        app:layout_constraintBottom_toTopOf="@+id/ib_pago_dia_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pago_dia_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/pago_dia_completo"
        app:layout_constraintBottom_toTopOf="@+id/ib_pago_transporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pago_transporte_eia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/pago_transporte_eia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_pago_dia_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/icono_pago_normal"
        app:layout_constraintBottom_toTopOf="@+id/btn_pago_dia_normal"
        app:layout_constraintEnd_toEndOf="@+id/btn_pago_dia_normal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_pago_dia_normal" />

    <ImageButton
        android:id="@+id/ib_pago_dia_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/icono_pago_dia"
        app:layout_constraintBottom_toTopOf="@+id/btn_pago_dia_completo"
        app:layout_constraintEnd_toEndOf="@+id/btn_pago_dia_completo"
        app:layout_constraintStart_toStartOf="@+id/btn_pago_dia_completo" />

    <ImageButton
        android:id="@+id/ib_pago_transporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/icono_pago_transporte"
        app:layout_constraintBottom_toTopOf="@+id/btn_pago_transporte_eia"
        app:layout_constraintEnd_toEndOf="@+id/btn_pago_transporte_eia"
        app:layout_constraintStart_toStartOf="@+id/btn_pago_transporte_eia" />


</androidx.constraintlayout.widget.ConstraintLayout>